<resources>
    <string name="app_name">Health Diary</string>
    <string name="enter_high_blood_pressure">Enter High Blood Pressure</string>
    <string name="enter_low_blood_pressure">Enter Low Blood Pressure</string>
    <string name="enter_glucose">Enter Glucose</string>
    <string name="enter_height">Enter Height(cm)</string>
    <string name="enter_weight">Enter Weight(kg)</string>
    <string name="enter_heart_rate">Enter Heart Rate</string>
    <string name="blood_pressure_recorder">Blood Pressure Recorder</string>
    <string name="enter_date">Enter date</string>
    <string name="save_data">Save Data</string>
    <string name="saved_data">Saved Data</string>
    <string name="high_bp">High BP</string>
    <string name="low_bp">Low BP</string>
    <string name="heart_rate">HR</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to clear all your data?</string>
    <string name="delete_dialog_message_one_row">Are you sure you want to delete?</string>
    <string name="delete_dialog_positive_button">Yes</string>
    <string name="delete_dialog_negative_button">Cancel</string>
    <string name="go_to_data">Go to data</string>
    <string name="back">Back</string>
    <string name="add_record">Add record</string>
    <string name="customize_time">Customize Time</string>
    <string name="add_person">Add person</string>
    <string name="save_person">Save person</string>
    <string name="enter_name_of_new_person">Enter name of new person</string>
    <string name="delete">Delete</string>
    <string name="delete_all_people">Are you sure you want to delete all data for everyone?</string>
    <string name="sort">Sort</string>
    <string name="sort_date_ascending">Sort by date (ascending)</string>
    <string name="sort_date_descending">Sort by date (descending)</string>
    <string name="choose_another_person">Choose another person</string>
    <string name="choose_person_fragment">Choose person</string>
    <string name="add_person_fragment">Add a new person</string>
    <string name="blood_pressure">BP</string>
    <string name="height_amp_weight">Weight</string>
    <string name="blood_glucose">Glucose</string>
    <string name="change_person">Change</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight">Weight(kg)</string>
    <string name="height">Height(cm)</string>
    <string name="person_changed_snackbar_message">Person changed to "%1$s"</string>
    <string name="before_after_food">Food</string>
    <string name="before_food">Before</string>
    <string name="after_food">After</string>
    <string name="before_food_checkbox_message">Before food</string>
    <string name="delete_person">Are you sure you want to delete "%1$s"?</string>
    <string name="after_food_checkbox_message">After food</string>
    <string name="title">Viewing "%1$s\'s" data</string>
    <string name="legend_high">High</string>
    <string name="legend_normal">Normal</string>
    <string name="blood_pressure_type">Blood Pressure</string>
    <string name="glucose_type">Glucose</string>
    <string name="height_weight_type">Height &amp; Weight</string>
</resources>