<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addItem"
        android:title="@string/add_record"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_add_24"/>
    <item
        android:id="@+id/delete_all_menu_item"
        android:title="@string/delete_all"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_delete_24"/>
    <item
        android:id="@+id/sort"
        android:title="Sort"
        android:icon="@drawable/ic_baseline_sort_24"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sortDateAscending"
                android:title="@string/sort_date_ascending"
                app:showAsAction="never"/>

            <item
                android:id="@+id/sortDateDescending"
                android:title="@string/sort_date_descending"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>