<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvGlucose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/blood_glucose"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/tvBeforeAfterFood"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvDate"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvBeforeAfterFood"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/before_after_food"
            android:textSize="16sp"
            android:paddingTop="0dp"
            android:textAlignment="center"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@id/tvPlaceholder"
            app:layout_constraintStart_toEndOf="@id/tvGlucose"
            app:layout_constraintTop_toTopOf="parent"
/>

        <TextView
            android:id="@+id/tvPlaceholder"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bloodPressureRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGlucose"
            app:layout_constraintVertical_bias="1.0">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>